internal/suites/example/kube/mail/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailcatcher-ingress
  namespace: authelia
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - secretName: mail-tls
      hosts:
        - mail.example.com
  rules:
    - host: mail.example.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: mailcatcher-service
                port:
                  number: 1080
...
